--- a/OnlineClothesStore/OnlineClothesStore.csproj
+++ b/OnlineClothesStore/OnlineClothesStore.csproj
@@ -163,17 +163,15 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Sellers\Create.cshtml" />
-    <Content Include="Views\Sellers\Delete.cshtml" />
-    <Content Include="Views\Sellers\Details.cshtml" />
     <Content Include="Views\Sellers\Edit.cshtml" />
     <Content Include="Views\Sellers\Login.cshtml" />
     <Content Include="Views\Clothes\Create.cshtml" />
-    <Content Include="Views\Clothes\Delete.cshtml" />
     <Content Include="Views\Clothes\Details.cshtml" />
     <Content Include="Views\Clothes\Edit.cshtml" />
     <Content Include="Views\Clothes\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Sellers\LoginFail.cshtml" />
+    <Content Include="Views\Sellers\AuthenticationFail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
