--- a/OnlineClothesStore/OnlineClothesStore.csproj
+++ b/OnlineClothesStore/OnlineClothesStore.csproj
@@ -163,11 +163,12 @@
     <Content Include="Views\Sellers\Edit.cshtml" />
     <Content Include="Views\Sellers\Login.cshtml" />
     <Content Include="Views\Clothes\Create.cshtml" />
-    <Content Include="Views\Clothes\Details.cshtml" />
     <Content Include="Views\Clothes\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Sellers\LoginFail.cshtml" />
     <Content Include="Views\Sellers\AuthenticationFail.cshtml" />
+    <Content Include="Views\Clothes\ClothesFail.cshtml" />
+    <Content Include="Views\Clothes\Search.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
